--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.8.3",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-datetime": "^2.16.3",
+    "react-datetime-picker": "^2.1.1",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5"
   },
