--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://godara17.github.io/todo-app",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.8.3",
