--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "http://godara17.github.io/todo-app",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.8.3",
@@ -10,6 +12,7 @@
     "react-datetime": "^2.16.3",
     "react-datetime-picker": "^2.1.1",
     "react-dom": "^16.8.3",
+    "react-router": "^4.3.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
@@ -26,5 +29,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1",
+    "git-push": "^0.1.1"
+  }
 }
